force-app/main/default/objects/Coverage_Type__c/Coverage_Type__c.object-meta.xml
<CustomObject>
    <label>Coverage Type</label>
    <pluralLabel>Coverage Types</pluralLabel>
    <nameField>
        <label>Coverage Type Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Catalog of insurance coverage products offered, categorized by line of business (Auto, Home, Health, Life). Referenced by Policy Master via lookup.</description>
</CustomObject>