force-app/main/default/objects/Coverage_Type__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this coverage type is currently offered for new policies.</description>
</CustomField>