force-app/main/default/objects/Coverage_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Detailed description of what this coverage type includes and excludes.</description>
</CustomField>